added in db valid check for phone numbers [10]

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -60,6 +60,7 @@
 
                         <label class="form-label form-inline" for="personal_phone">Preferred Contact Phone
                             Number:</label>
+                        <p class="exampletext text-small"> Example: Write 8035764434 instead of 803-576-4434.</p>
                         <input class="form-input" type="number" id="personal_phone" name="personal_phone" required />
                         <!--address 1 allow null--> <!--address 2 allow null-->
                         <label class="form-label form-inline" for="address1">Home Address (Not Required):</label>
@@ -228,12 +229,12 @@
                         <input class="form-input" type="text" id="title" name="title" required />
                         <!--work phone allow null-->
                         <label class="form-label form-inline" for="work_phone">Work Phone Number (Not Required):</label>
+                        <p class="exampletext text-small"> Example: Write 8035764434 instead of 803-576-4434.</p>
                         <input class="form-input" type="tel" id="work_phone" name="work_phone" />
                         <!--work phone ext allow null-->
-
-
                         <label class="form-label form-inline" for="work_phoneext">Work Phone
                             Extension (Not Required):</label>
+                        <p class="exampletext text-small"> Example: Write 5555 instead of Ext5555.</p>
                         <input class="form-input" type="number" id="work_phoneext" name="work_phoneext"
                             placeholder="0000" />
                         <!--base rate-->
