add value= for GENDER, SEXUALITY, ETHNICITY radio options

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -104,100 +104,100 @@
                         <!--sex allow null-->
                         <p class="labeltext">Gender Identity (Not Required):</p>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Cis Female">
                             <i class="form-icon"></i> Cis Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Cis Male">
                             <i class="form-icon"></i> Cis Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Non-Binary">
                             <i class="form-icon"></i> Non-Binary
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Trans Female">
                             <i class="form-icon"></i> Trans Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Trans Male">
                             <i class="form-icon"></i> Trans Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Other">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sex">
+                            <input type="radio" class="formradio" name="sex" value="Prefer to Not Identify">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--sexual_orientation allow null-->
                         <p class="labeltext">Sexual Orientation (Not Required):</p>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formcheckbox" name="sexual_orientation" value="Asexual">
                             <i class="form-icon"></i> Asexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Bisexual">
                             <i class="form-icon"></i> Bisexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Gay">
                             <i class="form-icon"></i> Gay
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Heterosexual">
                             <i class="form-icon"></i> Heterosexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Lesbian">
                             <i class="form-icon"></i> Lesbian
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formcheckbox" name="sexual_orientation" value="Pansexual">
                             <i class="form-icon"></i> Pansexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Other">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation" value="Prefer to Not Identify">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--ethnicity-->
-                        <p class="labeltext">Ethnicity (Please select all that apply, or at least one from the list.):
+                        <p class="labeltext">Ethnicity (Please select the one that best applies.):
                         </p>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="American Indian or Alaskan Native">
                             <i class="form-icon"></i> American Indian or Alaskan Native
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Asian">
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Black or African American">
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
-                            <i class="form-icon"></i> Hispanic
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Hispanic">
+                            <i class="form-icon"></i> Hispanic or Latinx
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Middle Eastern or North African">
                             <i class="form-icon"></i> Middle Eastern or North African
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Native Hawaiian or Other Pacific Islander">
                             <i class="form-icon"></i> Native Hawaiian or Other Pacific Islander
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="White or Caucasian">
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-radio">
-                            <input type="checkbox" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
+                            <input type="checkbox" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Other">
                             <i class="form-icon"></i> Other
                         </label>
                     </div> <!--CARD BODY END-->
@@ -235,8 +235,7 @@
                         <label class="form-label form-inline" for="work_phoneext">Work Phone
                             Extension (Not Required):</label>
                         <p class="exampletext text-small"> Example: Write 5555 instead of Ext5555.</p>
-                        <input class="form-input" type="number" id="work_phoneext" name="work_phoneext"
-                            placeholder="0000" />
+                        <input class="form-input" type="number" id="work_phoneext" name="work_phoneext" />
                         <!--base rate-->
                         <label class="form-label form-inline" for="base_rate">Base Rate: </label>
                         <p class="exampletext text-small">Example: Write "23" instead of "$23/hour"</p>
