changed zip input type to number

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -83,7 +83,7 @@
                         </select>
                         <!--zip allow null-->
                         <label class="form-label form-inline" for="zip">Zip Code (Not Required):</label>
-                        <input class="form-input" type="text" id="zip" name="zip" />
+                        <input class="form-input" type="number" id="zip" name="zip" />
                     </div> <!--CARD BODY END-->
                 </div> <!--ACCORDION BODY END-->
             </div> <!--ACCORDION END-->
