--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -60,8 +60,8 @@
 
                         <label class="form-label form-inline" for="personal_phone">Preferred Contact Phone
                             Number:</label>
-                        <p class="exampletext text-small"> Example: Write 8035764434 instead of 803-576-4434.</p>
-                        <input class="form-input" type="number" id="personal_phone" name="personal_phone" required />
+                        <p class="exampletext text-small"> Please include Area Code. Example: Write 8035764434 instead of 803-576-4434.</p>
+                        <input class="form-input" type="number" id="personal_phone" name="personal_phone" required minlength="10" maxlength="10"/>
                         <!--address 1 allow null--> <!--address 2 allow null-->
                         <label class="form-label form-inline" for="address1">Home Address (Not Required):</label>
 
@@ -83,7 +83,7 @@
                         </select>
                         <!--zip allow null-->
                         <label class="form-label form-inline" for="zip">Zip Code (Not Required):</label>
-                        <input class="form-input" type="number" id="zip" name="zip" />
+                        <input class="form-input" type="number" id="zip" name="zip" minlength="5" maxlength="5"/>
                     </div> <!--CARD BODY END-->
                 </div> <!--ACCORDION BODY END-->
             </div> <!--ACCORDION END-->
@@ -229,8 +229,8 @@
                         <input class="form-input" type="text" id="title" name="title" required />
                         <!--work phone allow null-->
                         <label class="form-label form-inline" for="work_phone">Work Phone Number (Not Required):</label>
-                        <p class="exampletext text-small"> Example: Write 8035764434 instead of 803-576-4434.</p>
-                        <input class="form-input" type="tel" id="work_phone" name="work_phone" />
+                        <p class="exampletext text-small"> Please include Area Code. Example: Write 8035764434 instead of 803-576-4434.</p>
+                        <input class="form-input" type="number" id="work_phone" name="work_phone" minlength="10" maxlength="10"/>
                         <!--work phone ext allow null-->
                         <label class="form-label form-inline" for="work_phoneext">Work Phone
                             Extension (Not Required):</label>
