--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -1,39 +1,47 @@
-<!--UPCOMING-->
-<div class="card upcoming">
+<!--MAKE A PAYMENT-->
+<div class="card makepayment">
   <div class="card-header">
     <div class="card-title h5">Upcoming Payments</div>
     <div class="card-subtitle">Total ${{Dates.amount}} due by {{Dates.due_date}}</div>
   </div>
   <div class="card-body">
-    Content Body
-  </div>
-</div>
-<!--Make a Payment-->
-<div class="card makepayment">
-  <div class="card-header">
-    <div class="card-title h5">Make a Payment</div>
-    <div class="card-subtitle">Total ${{Dates.amount}} due by {{Dates.due_date}}</div>
-  </div>
-  <div class="card-body">
-    ...
+    <p>Make a payment:</p>
   </div>
   <div class="card-footer">
     <button class="btn btn-primary"><i class="fa-regular fa-money-bill" style="color: #EBEBEBff;"></i>Pay Now</button>
   </div>
 </div>
-<!--Payment History-->
+<!--PAYMENT HISTORY-->
 <div class="card payhistory">
   <div class="card-header">
-    <div class="card-title h5">Your Payment History</div>
+    <div class="card-title text-center h5">Your Payment History</div>
   </div>
   <div class="card-body">
-    
-    <ul>
-        <!--{{#each through PayHist date_id, due_date, paid}}-->
-        <li>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Paid</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="active">
+          {{#if PayHist.paid === true}}
+            {{#each PayHist}}
+            <td>{{due_date}}</td>
+            <td>Paid.</td>
+            {{/each}}
+          {{else}}
+            {{#each PayHist}}
+            <td>{{due_date}}</td>
+            <td>Missed payment. Please contact your representative.</td>
+            {{/each}}
+          {{/if}}
+        </tr>
+      </tbody>
+    </table>
 
-        </li>
-        <!--{{/each}}-->
+
     </ul>
   </div>
 </div>
