--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -59,6 +59,19 @@
   padding: 0.4rem;
 }
 
+/* PAYMENT CARDS */
+table {
+  color: var(--dark);
+}
+
+/*td.paiddues {
+background-color: var(--green);
+}*/
+
+td.missedpayment {
+  background-color: var(--rust);
+}
+
 /* LOGIN CARD */
 .login-card {
   margin-inline:auto;
