if there are any missed payments, the text turns red and becomes bold

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -70,6 +70,7 @@ background-color: var(--green);
 
 td.missedpayment {
   background-color: var(--rust);
+  font-weight: bold;
 }
 
 /* LOGIN CARD */
