--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -33,7 +33,7 @@
             {{/each}}
           {{else}}
             {{#each PayHist}}
-            <td>{{due_date}}</td>
+            <td  class="missedpayment">{{due_date}}</td>
             <td class="missedpayment">Missed payment. Please contact your representative.</td>
             {{/each}}
           {{/if}}
