--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -8,7 +8,7 @@
     <p>Make a payment:</p>
   </div>
   <div class="card-footer">
-    <button class="btn btn-primary"><i class="fa-regular fa-money-bill" style="color: #EBEBEBff;"></i>Pay Now</button>
+    <button class="btn btn-success"><i class="fa-regular fa-money-bill" style="color: #EBEBEBff;"></i>Pay Now</button>
   </div>
 </div>
 <!--PAYMENT HISTORY-->
