--- a/views/payments.handlebars
+++ b/views/payments.handlebars
@@ -2,7 +2,7 @@
 
 <div class="h2 text-center">
     {{#if first_name}}
-        {{first_name}}, see all your upcoming payments.
+        {{first_name}}, see all your upcoming payments and payment history below.
     {{/if}}
 </div>
 <div class="divider"></div>
