added route, half finished on completing barebones html page

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -11,6 +11,7 @@
       <ul class="menu">
         <a href="/" class="btn btn-link">HOME</a>
         <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
+        <a href="/payments" class="btn btn-link">DUES PAYMENT</a>
         {{#if loggedIn}}
           <a href="/logout" class="btn btn-link">LOGOUT</a>
         {{else}}
