Progress for others to assist.

--- a/views/payments.handlebars
+++ b/views/payments.handlebars
@@ -1,8 +1,9 @@
 {{>nav}}
+{{>payments}}
 
-<div class="h2 text-center">
+{{!-- <div class="h2 text-center">
     {{#if first_name}}
         {{first_name}}, see all your upcoming payments.
     {{/if}}
 </div>
-<div class="divider"></div>
+<div class="divider"></div> --}}
