add paypal functionality via paypal-rest-sdk

--- a/views/payments.handlebars
+++ b/views/payments.handlebars
@@ -1,9 +1,10 @@
 {{>nav}}
+{{>alert}}
 {{>payments}}
 
-{{!-- <div class="h2 text-center">
+<div class="h2 text-center">
     {{#if first_name}}
-        {{first_name}}, see all your upcoming payments.
+        {{first_name}}, see all your upcoming payments and payment history below.
     {{/if}}
 </div>
-<div class="divider"></div> --}}
+<div class="divider"></div>
