--- a/views/payments.handlebars
+++ b/views/payments.handlebars
@@ -1,10 +1,10 @@
 {{>nav}}
-{{>alert}}
-{{>payments}}
 
-<div class="h2 text-center">
+<div class="h2 pay-header text-center">
     {{#if first_name}}
         {{first_name}}, see all your upcoming payments and payment history below.
     {{/if}}
 </div>
-<div class="divider"></div>
+
+{{>alert}}
+{{>payments}}
