--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -1,54 +1,46 @@
-<!--MAKE A PAYMENT-->
-<div class="card makepayment">
-  <div class="card-header">
-    <div class="card-title h5">Upcoming Payments</div>
-    {{!-- <div class="card-subtitle">Total ${{Dates.amount}} due by {{Dates.due_date}}</div> --}}
+<div class="container d-flex">
+  <!--MAKE A PAYMENT-->
+  <div class="card paycard col-6">
+    <div class="card-header">
+      <div class="card-title text-center h5">Make a Payment</div>
+      {{!-- <div class="card-subtitle">Total ${{Dates.amount}} due by {{Dates.due_date}}</div> --}}
+    </div>
+    <div class="card-body text-center">
+      <p>Pay with PayPal</p>
+      <form action="/pay" method="post">
+        <input type="submit" value="Pay Now" class="btn paybtn">
+      </form>
+    </div>
   </div>
-  <div class="card-body">
-    <p>Make a payment:</p>
-    <form action="/pay" method="post">
-    <input type="submit" value="Buy">
-  </div>
-  <div class="card-footer">
-
-  </div>
-</div>
-<!--PAYMENT HISTORY-->
-<div class="card payhistory">
-  <div class="card-header">
-    <div class="card-title text-center h5">Your Payment History</div>
-  </div>
-  <div class="card-body">
-    <table class="table payhisttable">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Dues Paid</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="active">
-
-          {{!-- {{#if PayHist.paid === true}}
-=======
-          {{#if PayHist.paid === true}}
-
+  <!--PAYMENT HISTORY-->
+  <div class="card pay-card col-6">
+    <div class="card-header">
+      <div class="card-title text-center h5">Your Payment History</div>
+    </div>
+    <div class="card-body">
+      <table class="table payhisttable">
+        <thead>
+          <tr>
+            <th class="text-center">Date</th>
+            <th class="text-center">Dues Paid</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="active">
+            {{!-- {{#if PayHist.paid === true}}
             {{#each PayHist}}
             <td>{{due_date}}</td>
             <td class="paiddues">Paid.</td>
             {{/each}}
-          {{else}}
+            {{else}}
             {{#each PayHist}}
-            <td  class="missedpayment">{{due_date}}</td>
+            <td class="missedpayment">{{due_date}}</td>
             <td class="missedpayment">Missed payment. Please contact your representative.</td>
             {{/each}}
-          {{/if}} --}}
-
-        </tr>
-      </tbody>
-    </table>
-
-
-    </ul>
+            {{/if}} --}}
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
