added PAY DUES to navigation. needs icon

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -11,12 +11,11 @@
       <ul class="menu">
         <a href="/" class="btn btn-link">HOME</a>
         <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
-        <a href="/payments" class="btn btn-link">DUES PAYMENT</a>
+        <a href="/pay" class="btn btn-link">PAY DUES</a>
         {{#if loggedIn}}
           <a href="/logout" class="btn btn-link">LOGOUT</a>
         {{else}}
           <a href="/login" class="btn btn-link">LOGIN</a>
-
         {{/if}}
       </ul>
     </div>
@@ -36,6 +35,7 @@
           height="20"
           width="20"
         /><a href="/dashboard" class="text-light">DASHBOARD</a></span>
+      <span><a href="/pay" class="text-light">PAY DUES</a></span>
       {{#if loggedIn}}
         <span><img
             src="./icons/logout.svg"
