added table with payment information

--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -27,16 +27,12 @@
         </thead>
         <tbody>
           <tr class="active">
-            {{#if PayHist.paid === true}}
-            {{#each PayHist}}
-            <td>{{due_date}}</td>
-            <td class="paiddues">Paid.</td>
-            {{/each}}
-            {{else}}
-            {{#each PayHist}}
-            <td class="missedpayment">{{due_date}}</td>
-            <td class="missedpayment">Missed payment. Please contact your representative.</td>
-            {{/each}}
+            {{#if PayHist}}
+              <td>{{due_date}} </td>
+              <td class="paiddues">Paid.</td>
+              {{else}}
+              <td class="missedpayment">{{due_date}} </td>
+              <td class="missedpayment">Missed payment. Please contact your representative.</td>
             {{/if}}
           </tr>
         </tbody>
