removed onclick attr for ethnicity section

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -169,35 +169,35 @@
                         <p class="labeltext">Ethnicity (Please select the one that best applies.):
                         </p>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="American Indian or Alaskan Native">
+                            <input type="radio" class="formradio" name="ethnicity" value="American Indian or Alaskan Native">
                             <i class="form-icon"></i> American Indian or Alaskan Native
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Asian">
+                            <input type="radio" class="formradio" name="ethnicity" value="Asian">
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Black or African American">
+                            <input type="radio" class="formradio" name="ethnicity" value="Black or African American">
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Hispanic">
+                            <input type="radio" class="formradio" name="ethnicity" value="Hispanic">
                             <i class="form-icon"></i> Hispanic or Latinx
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Middle Eastern or North African">
+                            <input type="radio" class="formradio" name="ethnicity" value="Middle Eastern or North African">
                             <i class="form-icon"></i> Middle Eastern or North African
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Native Hawaiian or Other Pacific Islander">
+                            <input type="radio" class="formradio" name="ethnicity" value="Native Hawaiian or Other Pacific Islander">
                             <i class="form-icon"></i> Native Hawaiian or Other Pacific Islander
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="White or Caucasian">
+                            <input type="radio" class="formradio" name="ethnicity" value="White or Caucasian">
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-radio">
-                            <input type="checkbox" class="formradio" name="ethnicity" onclick="ifCheckedVal()" value="Other">
+                            <input type="checkbox" class="formradio" name="ethnicity" value="Other">
                             <i class="form-icon"></i> Other
                         </label>
                     </div> <!--CARD BODY END-->
