added data for payment page amount and due_date

--- a/views/partials/payments.handlebars
+++ b/views/partials/payments.handlebars
@@ -6,7 +6,7 @@
     </div>
     <div class="divider"></div>
     <div class="card-body text-center">
-      <p class="text-center">Total ${{Dates.amount}} due by {{Dates.due_date}}. Click below to pay your union dues with PayPal.</p>
+      <p class="text-center">Total ${{amount}} due by {{due_date}}. Click below to pay your union dues with PayPal.</p>
       <form action="/pay" method="post">
         <input type="submit" value="Pay Now" class="btn paybtn">
       </form>
