update logo and add banner

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,6 @@
 <header class="navbar">
   <nav class="navbar-section">
-    <h1 class="site-header">LaborHub</h1>
+    <img src="./icons/LH-logo-Monochrome-White.svg" width="300px" />
     {{! Mobile view Nav }}
     <div class="dropdown show-md">
       <a href="#" class="btn btn-link dropdown-toggle" tabindex="0">
