--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -9,12 +9,12 @@
     --green: #93C572;
 }
 
-  body {
-    font-family: 'Roboto', Tahoma, Verdana, sans-serif;
-    background-color: var(--light);
-    color: var(--dark) !important;
-    /* margin: 1rem !important; */
-  }
+body {
+  font-family: 'Roboto', Tahoma, Verdana, sans-serif;
+  background-color: var(--light);
+  color: var(--dark) !important;
+  /* margin: 1rem !important; */
+}
 
 /* NAVBAR */
 .navbar-section {
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: baseline;
   align-self: center;
-  margin: 0;
+  margin: 0.5rem;
 }
 
 /* USE THIS TO ADD MARGINS WITH OUT APPLYING TO HEADER */
