--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,6 @@
 <header class="navbar">
   <nav class="navbar-section">
-    <img src="./icons/LH-logo-Monochrome-White.svg" width="300px" />
+    <img src="/icons/LH-logo-Monochrome-White.svg" width="300px" />
     {{! Mobile view Nav }}
     <div class="dropdown show-md">
       <a href="#" class="btn btn-link dropdown-toggle" tabindex="0">
@@ -11,8 +11,8 @@
       <ul class="menu">
         <a href="/" class="btn btn-link">HOME</a>
         <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
-        <a href="/pay" class="btn btn-link">PAY DUES</a>
         {{#if loggedIn}}
+          <a href="/pay" class="btn btn-link">PAY DUES</a>
           <a href="/logout" class="btn btn-link">LOGOUT</a>
         {{else}}
           <a href="/login" class="btn btn-link">LOGIN</a>
@@ -35,15 +35,16 @@
           height="20"
           width="20"
         /><a href="/dashboard" class="text-light">DASHBOARD</a></span>
-      <span>
-        <img
-          src="./icons/dollar-sign-solid.svg"
-          alt="payment icon"
-          height="20"
-          width="20"
-        />
-        <a href="/pay" class="text-light">PAY DUES</a></span>
       {{#if loggedIn}}
+        <span>
+          <img
+            src="./icons/dollar-sign-solid.svg"
+            alt="payment icon"
+            height="20"
+            width="20"
+          />
+          <a href="/pay" class="text-light">PAY DUES</a></span>
+
         <span><img
             src="./icons/logout.svg"
             alt="logout icon"
